// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "va kig siːz va gubf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "va bɔgs siː va gubfs",
    },
    {
      "english": "i give you the bread",
      "target": "ag givɪŋ gu",
    },
    {
      "english": "the king walks at the river",
      "target": "va kig gɔkɪŋz æʔt va divad",
    },
    {
      "english": "the king does not see the wolf",
      "target": "va kig baʔt siːz va gubf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "digi vididit luːpuːum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kãnii vididinθ luːpuːium",
    },
    {
      "english": "i give you the bread",
      "target": "igoː dadio tuːum",
    },
    {
      "english": "the king walks at the river",
      "target": "digi ãmbuːladit flũmi",
    },
    {
      "english": "the king does not see the wolf",
      "target": "digi noːn vididit luːpuːum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "kiwi lupin kowili",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kokowili lupin kokowili",
    },
    {
      "english": "i give you the bread",
      "target": "mi paːnaː kinaː",
    },
    {
      "english": "the king walks at the river",
      "target": "kiwi paːw kaːpi pilo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "kiwi aːlaː lupin kowili",
    },
  ],
  "preset": "tokipona",
}
`;
